buttn and checkbox added

--- a/app/src/main/res/layout/activity_dialog_main.xml
+++ b/app/src/main/res/layout/activity_dialog_main.xml
@@ -30,4 +30,24 @@
         android:textSize="@dimen/btn_text_size"
         android:textStyle="bold"
         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New CheckBox"
+        android:id="@+id/checkBox" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
